tests/errors/20_arithmetic_type_mismatch.f
      PROGRAM ARITH_TYPE_MISMATCH
      INTEGER A
      LOGICAL B
      A = 1
      B = .TRUE.
      A = A + B
      END
